updated Chinese (Traditional) translation

--- a/po/wesnoth-dw/zh_TW.po
+++ b/po/wesnoth-dw/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # 李信融 <magiclen0810@gmail.com>, 2010.
 # 楊綮銘 <steven2880@gmail.com>, 2018.
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2018-08-04 22:48+0800\n"
+"PO-Revision-Date: 2019-03-12 18:11+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:13
@@ -357,10 +357,8 @@ msgstr "嘿，我做到了！"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:626
-#, fuzzy
-#| msgid "Good work Kai, if I may say so."
 msgid "Good work, Kai, if I may say so."
-msgstr "忍不住想誇獎你一下。凱，你做得好啊！"
+msgstr "凱，你做得好啊！忍不住想誇獎你一下。"
 
 #. [scenario]: id=02_Flight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:27
@@ -390,7 +388,7 @@ msgid ""
 "soldiers of different races. It seemed that he also lusted for merfolk "
 "slaves. Krellis’ scouts reported that more dark armies were heading north."
 msgstr ""
-"傳言說，莫．瑞文諾似乎是一位將自己轉為巫妖的偉大人類巫師，他襲擊了韋諾王國的"
+"傳言說，麥爾-諾曼鈉似乎是一位將自己轉為巫妖的偉大人類巫師，他襲擊了韋諾王國的"
 "邊境，建立起可怕的不死族的軍隊。他還派出死靈法師們攻擊半獸人和精靈，甚至是不"
 "同種族的亡靈。也有人說他特別喜歡拿人魚作為奴隸。根據克萊利斯的偵查兵回報，有"
 "更多黑暗的軍隊正朝向北方前進。"
@@ -442,7 +440,7 @@ msgstr "讓一個單位撿起這枚戒指，來獲得更強大的力量。"
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:90
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:105
 msgid "Mal-Ravanal’s Forces"
-msgstr "莫．瑞文諾的軍隊"
+msgstr "麥爾-諾曼鈉的軍隊"
 
 #. [side]: type=Necromancer, id=Mel Daveth
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:150
@@ -882,7 +880,7 @@ msgid ""
 "Hold on...It looks like a better feast is coming our way! Fresh fish, boys! "
 "Go get it."
 msgstr ""
-"聞起來真的好香啊......不行，我得hold住！看來等一下就可以享用到美味大餐了，兄"
+"聞起來真的好香啊......不行，我得撐得住！看來等一下就可以享用到美味大餐了，兄"
 "弟們，一起去吧！"
 
 #. [message]: speaker=Kai Krellis
@@ -900,7 +898,7 @@ msgstr "去看看這隻蝙蝠發現了什麼有趣的東西。"
 msgid ""
 "I wonder why such a strangely colored wolf emerged from the forest over "
 "there."
-msgstr ""
+msgstr "我想知道那個奇怪的狼為什麼從那邊的森林過來。"
 
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:306
@@ -1493,10 +1491,8 @@ msgstr "這個半獸人好像很有錢，他有一個寶箱，裡面裝著100個
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:745
-#, fuzzy
-#| msgid "Destroy all the undead"
 msgid "Now we must defeat the undead."
-msgstr "擊敗所有不死族"
+msgstr "現在我們必須擊敗不死族。"
 
 #. [message]: speaker=Marg-Tonz
 #. orc's boss' last breath, deliberately gendered instead of changing to "merfolk"
@@ -1673,8 +1669,6 @@ msgstr "麥可諾"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:124
-#, fuzzy
-#| msgid "What are you mermen doing here?"
 msgid "What are you merfolk doing here?"
 msgstr "你們這些人魚在這裡幹嘛？"
 
@@ -1700,16 +1694,12 @@ msgstr "女巫？"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:144
-#, fuzzy
-#| msgid ""
-#| "She kill drakes. If you are her friend, we will kill you. We do not want "
-#| "MORE mermen blasting and stabbing."
 msgid ""
 "She kill drakes. If you are her friend, we will kill you. We do not want "
 "MORE merfolk blasting and stabbing."
 msgstr ""
-"她殺了我的族人們。如果你們是她的朋友，那我們就要殺了你們。我們可不希望又更多"
-"的人魚拿著長矛來這裡搞破壞。"
+"她殺了我的族人們。如果你們是她的朋友，那我們就要殺了你們。我們可不希望又\"更"
+"多\"的人魚拿著長矛來這裡搞破壞。"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:148
@@ -2416,10 +2406,6 @@ msgstr "我也要加入你們！殺死那些基因突變的怪物。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:575
-#, fuzzy
-#| msgid ""
-#| "The mermen clapped their hands over their ears as a terrible wail echoed "
-#| "off the castle walls."
 msgid ""
 "The merfolk clapped their hands over their ears as a terrible wail echoed "
 "off the castle walls."
@@ -2633,14 +2619,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:17
-#, fuzzy
-#| msgid ""
-#| "The tribe that had fled Jotha unable to fight returned as an army "
-#| "stiffened by veteran fighters and led by a warrior king. Though they were "
-#| "tired from their journey, weariness fell from them as they neared home. "
-#| "The mermen arrived during the night, and found the mouth of their bay "
-#| "guarded, so they headed south along the coast to some outlying villages "
-#| "to gather news of the invaders."
 msgid ""
 "The tribe that had fled Jotha unable to fight returned as an army stiffened "
 "by veteran fighters and led by a warrior king. Though they were tired from "
@@ -2688,7 +2666,7 @@ msgid ""
 "and make yours safe as well. Mal-Ravanal will pay this day."
 msgstr ""
 "我們替這場戰鬥做好萬全準備了。我們將會奪回我們的家園，你們將會跟以前一樣安"
-"全。莫．瑞文諾在這天將會付出代價！"
+"全。麥爾-諾曼鈉在這天將會付出代價。"
 
 #. [message]: speaker=Nebthun
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:455
@@ -2704,10 +2682,8 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:491
-#, fuzzy
-#| msgid "At dawn, the mermen got a good look at their opponents."
 msgid "At dawn, the merfolk got a good look at their opponents."
-msgstr "黎民來臨，人魚們可以看清敵人的狀況了。"
+msgstr "黎明來臨，人魚們可以看清敵人的狀況了。"
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:497
@@ -2779,7 +2755,7 @@ msgstr "我們成功奪回家園了！"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:808
 msgid "Cylanna! I will miss you."
-msgstr "希蘭娜！我會失去妳！"
+msgstr "希蘭娜！我會失去妳。"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:819
@@ -2837,15 +2813,6 @@ msgstr "尾聲"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:33
-#, fuzzy
-#| msgid ""
-#| "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another "
-#| "attack. But it never came. Krellis sent some messengers south to discover "
-#| "what they could. The news that came back was better than good. Mal-"
-#| "Ravanal was dead! Soldiers of Wesnoth had defeated him at about the same "
-#| "time the mermen had defeated the undead at Jotha. With the evil wizard "
-#| "gone, the mermen relaxed and began rebuilding in earnest, and soon Jotha "
-#| "was restored."
 msgid ""
 "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another attack. "
 "But it never came. Krellis sent some messengers south to discover what they "
@@ -2854,9 +2821,9 @@ msgid ""
 "defeated the undead at Jotha. With the evil wizard gone, the merfolk relaxed "
 "and began rebuilding in earnest, and soon Jotha was restored."
 msgstr ""
-"解決掉莫．瑞文諾的不死軍隊後，凱．克萊利斯做好了迎接敵人反擊的準備，但他們始"
+"解決掉麥爾-諾曼鈉的不死軍隊後，凱．克萊利斯做好了迎接敵人反擊的準備，但他們始"
 "終沒有到來。克萊利斯派遣信使到南方調查原因。信使帶回來一個非常好的消息：在他"
-"們對抗礁沙城的不死族時，莫．瑞文諾已經被韋諾的士兵殺死了。邪惡的巫師死了，人"
+"們對抗礁沙城的不死族時，麥爾-諾曼鈉已經被韋諾的士兵殺死了。邪惡的巫妖死了，人"
 "魚們終於鬆了一口氣，他們開始努力重建家園。很快地，礁沙城再次在這塊土地上取回"
 "舉足輕重的地位。"
 
@@ -2895,7 +2862,7 @@ msgid ""
 msgstr ""
 "希蘭娜在此之後就沒有去過其他遙遠的地方，一直留在礁沙城作一位受人尊敬的長者。"
 "她仍然是個國家顧問，但她現在的主要工作則是治療病人和主持典禮和婚禮。大家現在"
-"都比不死族出現以前還要更能信賴她了！"
+"都比不死族出現以前還要更能信賴她了。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:70
@@ -3017,15 +2984,11 @@ msgstr "人魚平民"
 
 #. [unit_type]: id=Merman Citizen, race=merman
 #: data/campaigns/Dead_Water/units/Citizen.cfg:17
-#, fuzzy
-#| msgid ""
-#| "Mermen are mostly peaceful, but will fight to defend their homes. In this "
-#| "situation, even mermen with no weapons or training can be dangerous."
 msgid ""
 "Merfolk are mostly peaceful, but will fight to defend their homes. In this "
 "situation, even merfolk with no weapons or training can be dangerous."
 msgstr ""
-"人魚通常很和平，但一旦他們的家園受到威脅，即使是手無寸鐵未經鍛鍊的人魚也會變"
+"人魚通常很和平，但一旦他們的家園受到威脅，即使是手無寸鐵未經訓練的人魚也會變"
 "得很危險。"
 
 #. [unit_type]: id=Kraken, race=monster
@@ -3056,9 +3019,9 @@ msgid ""
 "soldiers. His strength allows him to wield powerful weapons and move "
 "quickly, even with heavy armor. His leadership abilities inspire his troops."
 msgstr ""
-"一位戰鬥技能出色而受到尊敬(特別是在戰士之中)的國王，他的力量很強大，可以輕鬆"
-"揮舞重型武器，即使身披重甲，它們也能快速移動。他的「領導」能力，更能鼓舞周圍"
-"的軍隊！"
+"一位戰鬥技能出色而受到尊敬的國王（特別是在戰士之中），他的力量很強大，可以輕"
+"鬆揮舞重型武器，即使身披重甲，它們也能快速移動。他的領導能力更能鼓舞周圍的軍"
+"隊。"
 
 #. [unit_type]: id=Merman Warrior King, race=merman
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:4
@@ -3094,7 +3057,7 @@ msgstr ""
 #. shown in the status table
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:73
 msgid "user_team_name^Merfolk"
-msgstr ""
+msgstr "人魚"
 
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:77
 msgid "Kai Krellis"
@@ -3107,18 +3070,14 @@ msgstr "風暴三叉戟"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:11
-#, fuzzy
-#| msgid "This weapon shoots powerful lightning bolts at your enemies."
 msgid ""
 "This trident gives merfolk the power to throw lightning at their enemies."
-msgstr "這個武器會向敵人發出強力的閃電。"
+msgstr "這個武器給予人魚能向敵人發出強力的閃電。"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:13
-#, fuzzy
-#| msgid "Only a merman can use this item."
 msgid "Only the merfolk can use this item."
-msgstr "只有人魚可以使用這個道具。"
+msgstr "只有人魚可以使用這個物品。"
 
 #. [effect]: type=fire
 #: data/campaigns/Dead_Water/utils/items.cfg:33
