--- a/po/wesnoth-editor/zh_TW.po
+++ b/po/wesnoth-editor/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # 楊綮銘 <steven2880@gmail.com>, 2008.
 #
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:29+0300\n"
-"PO-Revision-Date: 2018-07-31 00:11+0800\n"
+"PO-Revision-Date: 2019-03-12 15:53+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [brush]: id=brush-1
 #: data/core/editor/brushes.cfg:6
@@ -121,7 +121,7 @@ msgstr "特殊"
 #. Describes a scenario in the editor that has not set a time of day schedule
 #: data/core/editor/time-of-day.cfg:6
 msgid "time of day^None"
-msgstr ""
+msgstr "無"
 
 #. [editor_times]: id=test
 #: data/core/editor/time-of-day.cfg:11
@@ -417,7 +417,7 @@ msgid ""
 "Loaded referenced map file:\n"
 "$new"
 msgstr ""
-"已讀取地圖引用檔案:\n"
+"已讀取地圖引用檔案：\n"
 "$new"
 
 #: src/editor/map/editor_map.cpp:148
@@ -445,7 +445,7 @@ msgstr "這份地圖檔案像是一個章節，但是地圖資料連結一個不
 
 #: src/editor/map/map_context.cpp:604
 msgid "Could not save the scenario: $msg"
-msgstr "無法儲存章節： $msg"
+msgstr "無法儲存章節：$msg"
 
 #: src/editor/map/map_context.cpp:639
 msgid "Could not save into scenario"
@@ -453,7 +453,7 @@ msgstr "無法儲存地圖"
 
 #: src/editor/map/map_context.cpp:649
 msgid "Could not save the map: $msg"
-msgstr "無法儲存地圖： $msg"
+msgstr "無法儲存地圖：$msg"
 
 #: src/editor/palette/editor_palettes.cpp:51
 msgid "(Unknown Group)"
@@ -485,7 +485,7 @@ msgstr "錯誤"
 
 #: src/editor/palette/location_palette.cpp:273
 msgid "Invalid location id"
-msgstr ""
+msgstr "無效的位置 ID"
 
 #: src/editor/palette/location_palette.cpp:280
 msgid "Delete"
