updated Dutch translation

--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: wesnoth-editor\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2019-03-13 08:26+0100\n"
-"Last-Translator: Alexander van Gessel <ai0867@gmail.com>\n"
-"Language-Team: Dutch <AI0867@gmail.com>\n"
+"PO-Revision-Date: 2019-03-20 11:14+0100\n"
+"Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
+"Language-Team: Dutch <merijndevet@hotmail.com>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
