--- a/po/wesnoth-units/nl.po
+++ b/po/wesnoth-units/nl.po
@@ -7,14 +7,13 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:27 UTC\n"
-"PO-Revision-Date: 2019-03-14 13:59+0100\n"
+"PO-Revision-Date: 2019-03-25 20:52+0100\n"
 "Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
-"Language-Team: Dutch translation <merijndevet@hotmail.comm>\n"
-"Language: nl_NL\n"
+"Language-Team: Dutch <merijndevet@hotmail.com>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Bookmarks: 841,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
 "X-Generator: Poedit 2.2.1\n"
 
 #. [attack]: type=impact
@@ -470,7 +469,7 @@ msgid ""
 "Dwarven citadels are both renowned and feared; weapons that have broken the "
 "mightiest of warriors with a single blow."
 msgstr ""
-"Het is niet duidelijk waarom de Dwergse Draakwachters zo genoemd worden, het "
+"Het is niet duidelijk waarom de Dwergse Draakbewakers zo genoemd worden, het "
 "is een naam die ze gegeven is door hun dwergenbroeders. Sommigen speculeren "
 "dat de naam komt van het wapen waar ze bekend om staan, vreemde staven die "
 "vuur en dood veroorzaken. Anderen vermoeden dat dit komt omdat dergelijke "
@@ -695,7 +694,7 @@ msgid ""
 "Though a single shot from these ‘thundersticks’ can take several minutes to "
 "prepare, the results are seen by the Dwarves as being well worth the wait."
 msgstr ""
-"De Dwergse Donderwachters staan bekend om hun merkwaardige wapens; de "
+"De Dwergse Donderbewakers staan bekend om hun merkwaardige wapens; de "
 "vreemde stafjes van hout en ijzer die een donderend lawaai. maken De werking "
 "van de wapens is een mysterie, een geheim dat de dwergen van Knalga, van wie "
 "men vermoed dat ze de makers zijn, mee hun graf innemen. Het enige dat "
@@ -1119,7 +1118,7 @@ msgstr ""
 #. [unit_type]: id=Drake Enforcer, race=drake
 #: data/core/units/drakes/Enforcer.cfg:4
 msgid "Drake Enforcer"
-msgstr "Krachtddraak"
+msgstr "Krachtdraak"
 
 #. [unit_type]: id=Drake Enforcer, race=drake
 #: data/core/units/drakes/Enforcer.cfg:19
@@ -1196,7 +1195,7 @@ msgstr ""
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:4
 msgid "Drake Flameheart"
-msgstr "Vuurhartdraak"
+msgstr "Vlammenhartdraak"
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:18
@@ -1209,12 +1208,12 @@ msgid ""
 "leader for supremacy, and only if he is sure of the support of his fellow "
 "drakes."
 msgstr ""
-"Het ontbreekt de Vuurhartdraken aan de kracht om andere Draken met een hoge "
-"rang in een enkel gevecht te verslaan, maar ze kiezen er altijd voor om "
+"Het ontbreekt de Vlammenhartdraken aan de kracht om andere Draken met een "
+"hoge rang in een enkel gevecht te verslaan, maar ze kiezen er altijd voor om "
 "confrontaties binnen hun stam te vermijden. De ervaring heeft elke Draak van "
 "deze grootte het bereik van zijn gezag laten inzien: waar hij diegenen die "
 "hij leidt kan verdringen en wanneer het het beste is om hen hun eigen "
-"plannen te laten uitvoeren. Slechts af en toe zal een Vuurhartdraak zijn "
+"plannen te laten uitvoeren. Slechts af en toe zal een Vlammenhartdraak zijn "
 "stamhoofd uitdagen voor het heerschappij, en enkel als hij zeker is van de "
 "steun van zijn mededraken."
 
@@ -1958,7 +1957,7 @@ msgstr ""
 #. [unit_type]: id=Dune Warmaster, race=dunefolk
 #: data/core/units/dunefolk/Warmaster.cfg:4
 msgid "Dune Warmaster"
-msgstr "Duinse Zwaardmeester"
+msgstr "Duinse Oorlogsmeester"
 
 #. [unit_type]: id=Dune Warmaster, race=dunefolk
 #: data/core/units/dunefolk/Warmaster.cfg:26
@@ -1969,12 +1968,11 @@ msgid ""
 "strength and skill. Their travels and travails are told endlessly around the "
 "campfire with the reverent tones of those that speak of living legends."
 msgstr ""
-"Elke generatie verheft een Zwaardvechter zichzelf boven zijn gelijken en "
-"vijanden. Ze lijken in staat om de bestemming van de wereld zelf te kunnen "
-"veranderen. Ze krijgen soms de naam Oorlogsmeester en worden gevierd om hun "
-"kracht en vaardigheden. Hun reizen en beproevingen worden eindeloos verteld "
-"rond het kampvuur met de eerbiedige toon van iemand die spreekt over levende "
-"legendes."
+"Elke generatie verheft een krijger zichzelf boven zijn gelijken en vijanden. "
+"Ze lijken in staat om de bestemming van de wereld zelf te kunnen veranderen. "
+"Ze krijgen vaak de naam Oorlogsmeester en worden gevierd om hun kracht en "
+"vaardigheden. Hun reizen en beproevingen worden eindeloos verteld rond het "
+"kampvuur met de eerbiedige toon van iemand die spreekt over levende legendes."
 
 #. [attack]: type=impact
 #: data/core/units/dunefolk/Warmaster.cfg:44
@@ -2047,7 +2045,7 @@ msgstr "razernij"
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #: data/core/units/dwarves/Dragonguard.cfg:4
 msgid "Dwarvish Dragonguard"
-msgstr "Dwergse Draakwachter"
+msgstr "Dwergse Draakbewaker"
 
 #. [unit_type]: id=Dwarvish Explorer, race=dwarf
 #: data/core/units/dwarves/Explorer.cfg:4
@@ -2216,7 +2214,7 @@ msgstr "Donderdwerg"
 #. [unit_type]: id=Dwarvish Thunderguard, race=dwarf
 #: data/core/units/dwarves/Thunderguard.cfg:4
 msgid "Dwarvish Thunderguard"
-msgstr "Dwergse Donderwachter"
+msgstr "Dwergse Donderbewaker"
 
 #. [unit_type]: id=Dwarvish Ulfserker, race=dwarf
 #: data/core/units/dwarves/Ulfserker.cfg:4
@@ -2983,7 +2981,7 @@ msgstr ""
 #. [unit_type]: id=Grand Knight, race=human
 #: data/core/units/humans/Horse_Grand_Knight.cfg:4
 msgid "Grand Knight"
-msgstr "Commandeur"
+msgstr "Beroemde Ridder"
 
 #. [unit_type]: id=Grand Knight, race=human
 #: data/core/units/humans/Horse_Grand_Knight.cfg:20
@@ -2994,9 +2992,9 @@ msgid ""
 "head of a charge is a terrifying sight for infantry, and is often enough to "
 "break right through a defensive line."
 msgstr ""
-"Commandeurs hebben het toppunt van vaardigheid met zwaard en lans bereikt. "
-"Volledig in staal gehuld en rijdend op paarden die gefokt zijn voor hun "
-"kracht, vormen deze strijders de kern van elke serieuze cavalerie. Een "
+"Beroemde Ridders hebben het toppunt van vaardigheid met zwaard en lans "
+"bereikt. Volledig in staal gehuld en rijdend op paarden die gefokt zijn voor "
+"hun kracht, vormen deze strijders de kern van elke serieuze cavalerie. Een "
 "commandeur vooraan een stormloop is een angstaanjagende aanblik voor "
 "infanterie en is vaak genoeg om dwars door een verdedigingslinie te breken."
 
@@ -3082,8 +3080,8 @@ msgstr ""
 "roem te beroven of in zeldzamere gevallen complexe misleidingen op touw "
 "gezet om deze troepen aan hun kant te houden.\n"
 "\n"
-"Paladijnen zijn typisch niet zo schrikwekkend als de grootofficieren die de "
-"meeste legers voorgaan maar ze zijn wel degelijk eerste klas krijgers. En "
+"Paladijnen zijn typisch niet zo schrikwekkend als de 'Beroemde Ridders' die "
+"de meeste legers voorgaan maar ze zijn wel degelijk eerste klas krijgers. En "
 "bovendien laat hun wijsheid en vroomheid hun toe om hun medekrijgers met "
 "verzorging bijstaan. Ze zijn ook zeer krachtig in het bestrijden van "
 "magische of onnatuurlijke vijanden, en sommigen hebben wat ervaring met "
